force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Pre_Trial_Status_Config__c.field-meta.xml
<CustomField>
    <fullName>Pre_Trial_Status_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Trial Status Config</label>
    <type>Checkbox</type>
</CustomField>