force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Prescreen__c.field-meta.xml
<CustomField>
    <fullName>Prescreen__c</fullName>
    <inlineHelpText>HCP/Physician Prescreen Amount</inlineHelpText>
    <label>Prescreen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>