force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Prescreen_to_Referral_Ratio_CAP_per_HCP__c.field-meta.xml
<CustomField>
    <fullName>Prescreen_to_Referral_Ratio_CAP_per_HCP__c</fullName>
    <label>Prescreen to Referral Ratio CAP per HCP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>