force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Privacy_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This looks up to the Privacy policy specific to CTP(Study) level.</description>
    <label>Privacy Policy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Terms_And_Conditions__c.T_C_Type__c</field>
            <operation>equals</operation>
            <value>Privacy Policy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Terms_And_Conditions__c</referenceTo>
    <relationshipLabel>Clinical Trial Profiles (Privacy Policy)</relationshipLabel>
    <relationshipName>Clinical_Trial_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>