force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <label>Profile Picture</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>