force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Program_Overview__c.field-meta.xml
<CustomField>
    <fullName>Program_Overview__c</fullName>
    <description>This field is used in Community as a Program Overview under Overview tab in Home Page</description>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>