force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Promote_to_SH__c.field-meta.xml
<CustomField>
    <fullName>Promote_to_SH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promote to SH</label>
    <type>Checkbox</type>
</CustomField>