force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Protocol_ID__c.field-meta.xml
<CustomField>
    <fullName>Protocol_ID__c</fullName>
    <description>QI assigned unique ID for a study</description>
    <externalId>true</externalId>
    <inlineHelpText>Protocol ID = Protocol Number. This is a unique number assigned by the sponsor providing a standard way to identify the study.  Obtain the protocol number from the Project Lead, Clinical Lead, Patient Recruitment Lead, or Site and Patient Networks Lead.</inlineHelpText>
    <label>Protocol ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>