force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Publications__c.field-meta.xml
<CustomField>
    <fullName>Publications__c</fullName>
    <description>Published scientific articles or abstracts about a clinical study.</description>
    <inlineHelpText>This field should map to the &quot;Publications&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Publications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>