force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Randomization__c.field-meta.xml
<CustomField>
    <fullName>Randomization__c</fullName>
    <label>Randomization</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>