force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Received_Until_Consent_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Received_Until_Consent_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Until Consent Is Available</label>
    <type>Checkbox</type>
</CustomField>