force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <inlineHelpText>field populated from Data Factory</inlineHelpText>
    <label>CTMS Recruitment Status</label>
<!--    <trackHistory>true</trackHistory>-->
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Follow-up / In Analysis</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>Enrollment Closed</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Open to Enrollment</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Closed to Enrollment</fullName>
            </value>
            <value>
                <fullName>Closed Follow Up / In Analysis</fullName>
                <isActive>false</isActive>
                <label>Closed Follow Up / In Analysis</label>
            </value>
            <value>
                <fullName>Proposed</fullName>
                <isActive>false</isActive>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>