force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <inlineHelpText>HCP/Physician Referral Amount</inlineHelpText>
    <label>Referral</label>
    <precision>18</precision>
    <scale>2</scale>

    <type>Currency</type>
</CustomField>