force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Referral_Limit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Limit__c</fullName>
    <label>Referral Limit</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>