force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Referral_Network_Service__c.field-meta.xml
<CustomField>
    <fullName>Referral_Network_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Network Service</label>
    <type>Checkbox</type>
</CustomField>