force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Relevant_Links_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Links_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relevant Links Are Available</label>
    <type>Checkbox</type>
</CustomField>