force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <description>Party responsible for submitting information about a clinical study to clinicaltrials.gov and updating that information</description>
    <inlineHelpText>Party responsible for submitting information about a clinical study to clinicaltrials.gov and updating that information</inlineHelpText>
    <label>Responsible Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>