force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Responsible_Party_Organization__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Organization__c</fullName>
    <label>Responsible Party Organization</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>