force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Restrict_automatic_PP_invitation_email__c.field-meta.xml
<CustomField>
    <fullName>Restrict_automatic_PP_invitation_email__c</fullName>
    <inlineHelpText>Ability for Business admins or System admins to restrict the auto-invite patient portal email for API referrals per study.</inlineHelpText>
    <label>Restrict automatic PP Invitation email</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ePR_Campaign</fullName>
            </value>
            <value>
                <fullName>ePR</fullName>
            </value>
            <value>
                <fullName>ACOE</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>23andMe</fullName>
            </value>
            <value>
                <fullName>IQVIA registry</fullName>
            </value>
            <value>
                <fullName>Ciitizen</fullName>
            </value>
            <value>
                <fullName>MassiveBio</fullName>
            </value>
            <value>
                <fullName>SubjectWell</fullName>
            </value>
            <value>
                <fullName>Piper</fullName>
            </value>
            <value>
                <fullName>James Lind Care</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>