force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Screening_Duration__c.field-meta.xml
<CustomField>
    <fullName>Screening_Duration__c</fullName>
    <label>Screening Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>