force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Share_URL__c.field-meta.xml
<CustomField>
    <fullName>Share_URL__c</fullName>
    <formula>&#39;https://www.clinicalresearch.com/en/find-trials/Study-Detail?docid=&#39; + NCT_Number__c + &#39;&amp;c=&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share URL</label>
    <type>Text</type>
</CustomField>