force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Availability_Status__c</fullName>
    <label>Shareback Availability Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>