force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Availability_Timing__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Availability_Timing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Show visit result after # completed visits</description>
    <label>Shareback Availability Timing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>