force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Settings_Countries__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Settings_Countries__c</fullName>
    <label>Shareback Settings Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>