force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Settings_On_Country_Level__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Settings_On_Country_Level__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shareback Settings On Country Level</label>
    <type>Checkbox</type>
</CustomField>