force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Settings_On_Participant_Level__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Settings_On_Participant_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shareback Settings On Participant Level</description>
    <label>Shareback Settings On Participant Level</label>
    <type>Checkbox</type>
</CustomField>