force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Shareback_Settings_on_StudySites__c.field-meta.xml
<CustomField>
    <fullName>Shareback_Settings_on_StudySites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shareback Settings on StudySites</label>
    <type>Checkbox</type>
</CustomField>