force-app/main/default/objects/Clinical_Trial_Profile__c/fields/ShortCommunityName__c.field-meta.xml
<CustomField>
    <fullName>ShortCommunityName__c</fullName>
    <description>Merge field for Push notifications</description>
    <label>ShortCommunityName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA Patient Portal</fullName>
            </value>
            <value>
                <fullName>Gather Share Know Participant Hub</fullName>
            </value>
            <value>
                <fullName>Janssen Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>