force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Sponsor_AWS__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_AWS__c</fullName>
    <label>Sponsor (AWS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>