force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Sponsor_Pays_for_Referral_Activity__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Pays_for_Referral_Activity__c</fullName>
    <inlineHelpText>Sponsor Pays for Referral Activity</inlineHelpText>
    <label>Sponsor Pays for Referral Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>