force-app/main/default/objects/Clinical_Trial_Profile__c/fields/SSO_enabled__c.field-meta.xml
<CustomField>
    <fullName>SSO_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSO enabled</label>
    <type>Checkbox</type>
</CustomField>