force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
<!--    <trackHistory>true</trackHistory>-->
    <type>Date</type>
</CustomField>