force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Status_Milestone_Available__c.field-meta.xml
<CustomField>
    <fullName>Status_Milestone_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status/Milestone Available</label>
    <type>Checkbox</type>
</CustomField>