force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Arms__c.field-meta.xml
<CustomField>
    <fullName>Study_Arms__c</fullName>
    <description># of arms/cohorts in a study.</description>
    <inlineHelpText>This field should map to the &quot;Study Arms&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Arms</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>