force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Code_Name__c</fullName>
    <label>Study Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>