force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Content__c.field-meta.xml
<CustomField>
    <fullName>Study_Content__c</fullName>
    <description>This field maps to the content accessible via Learn More links in PP.</description>
    <inlineHelpText>This field maps to the content accessible via Learn More links in PP.</inlineHelpText>
    <label>Trial Match Study Content</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>