force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Design__c.field-meta.xml
<CustomField>
    <fullName>Study_Design__c</fullName>
    <description>The investigative methods used in the clinical study</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field should map to the &quot;Study Design&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Design</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>