force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Documents_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Study_Documents_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Study Documents Are Available</label>
    <type>Checkbox</type>
</CustomField>