force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_External_URL__c.field-meta.xml
<CustomField>
    <fullName>Study_External_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Multimedia web link to view a participant trial journey</inlineHelpText>
    <label>Learn more about your journey</label>
    <type>Url</type>
</CustomField>