force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_GUID__c.field-meta.xml
<CustomField>
    <fullName>Study_GUID__c</fullName>
    <label>Study GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>