force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Phase__c.field-meta.xml
<CustomField>
    <fullName>Study_Phase__c</fullName>
    <description>Current Phase of the Study</description>
    <inlineHelpText>This field should map to the &quot;Study Phase&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Phase</label>
    <type>TextArea</type>
</CustomField>