force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Source__c.field-meta.xml
<CustomField>
    <fullName>Study_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Source</label>
    <type>TextArea</type>
</CustomField>