force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Study_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field should map to the &quot;Study Sponsor&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Sponsor</label>
    <length>400</length>

    <type>LongTextArea</type>
</CustomField>