force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Title__c.field-meta.xml
<CustomField>
    <fullName>Study_Title__c</fullName>
    <description>Title of the Study</description>
    <inlineHelpText>This field should map to the &quot;Brief Title&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>