force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Study_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Type__c</fullName>
    <description>Type of Study</description>
    <inlineHelpText>This field should map to the &quot;Study Type&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Study Type</label>
    <type>TextArea</type>
</CustomField>