force-app/main/default/objects/Clinical_Trial_Profile__c/fields/StudyGUID__c.field-meta.xml
<CustomField>
    <fullName>StudyGUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StudyGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>