force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Suppress_Participant_Emails__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Participant_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, no emails will be sent to participants for this study.</inlineHelpText>
    <label>Suppress Participant Emails</label>
    <type>Checkbox</type>
</CustomField>