force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Suppress_PI_Emails__c.field-meta.xml
<CustomField>
    <fullName>Suppress_PI_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will stop study related emails for PI and Site staff for all study sites</inlineHelpText>
    <label>Suppress PI Emails</label>
    <type>Checkbox</type>
</CustomField>