force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Clinical Trial Profiles</relationshipLabel>
    <relationshipName>Clinical_Trial_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>