force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Surveys_supported_Languages__c.field-meta.xml
<CustomField>
    <fullName>Surveys_supported_Languages__c</fullName>
    <label>Surveys Supported Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>