force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Synch_with_TMDH__c.field-meta.xml
<CustomField>
    <fullName>Synch_with_TMDH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMDH Sync</label>
    <type>Checkbox</type>
</CustomField>