force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Tasks_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Are Available</label>
    <type>Checkbox</type>
</CustomField>