force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Televisit_Vendor_is_Available__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Vendor_is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Televisit Vendor is Available</label>
    <type>Checkbox</type>
</CustomField>