force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Terms_And_Conditions_ID__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms And Conditions</label>
    <referenceTo>Terms_And_Conditions__c</referenceTo>
    <relationshipLabel>Clinical Trial Profiles</relationshipLabel>
    <relationshipName>Clinical_Trial_Profiles</relationshipName>

    <type>Lookup</type>
</CustomField>