force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapeutic Area</label>
    <referenceTo>Therapeutic_Area__c</referenceTo>
    <relationshipLabel>Clinical Trial Profiles</relationshipLabel>
    <relationshipName>Clinical_Trial_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>