force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Tokenization_Support__c.field-meta.xml
<CustomField>
    <fullName>Tokenization_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tokenization support will make gender and Subject ID mandatory, restrict participant statuses on bulk import</inlineHelpText>
    <label>Enable Tokenization</label>
    <type>Checkbox</type>
</CustomField>