force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Travel_Support_On_Relevant_Links__c.field-meta.xml
<CustomField>
    <fullName>Travel_Support_On_Relevant_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Support On Relevant Links</label>
    <type>Checkbox</type>
</CustomField>