force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Travel_Vendor_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Travel_Vendor_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Vendor Is Available</label>
    <type>Checkbox</type>
</CustomField>