force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Trial_Complete__c.field-meta.xml
<CustomField>
    <fullName>Trial_Complete__c</fullName>
    <label>Trial Complete</label>
    <type>Date</type>
</CustomField>