force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Trial_Match_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Trial_Match_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the trial matcher for participant</description>
    <label>Trial Match Is Available</label>
    <type>Checkbox</type>
</CustomField>