force-app/main/default/objects/Clinical_Trial_Profile__c/fields/UCPM_error_message__c.field-meta.xml
<CustomField>
    <fullName>UCPM_error_message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UCPM error message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>