force-app/main/default/objects/Clinical_Trial_Profile__c/fields/UCPM_Sponsor_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>UCPM_Sponsor_Org_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UCPM Sponsor Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>