force-app/main/default/objects/Clinical_Trial_Profile__c/fields/US_FDA_Regulated_Product__c.field-meta.xml
<CustomField>
    <fullName>US_FDA_Regulated_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US FDA Regulated Product</label>

    <type>Checkbox</type>
</CustomField>