force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Use_Social_IDP__c.field-meta.xml
<CustomField>
    <fullName>Use_Social_IDP__c</fullName>
    <label>Use Social IDP</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SSO_enabled__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>