force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field should map to the &quot;Verification Date&quot; field in clinicaltrials.gov.  If there is no day within clinicaltrials.gov, default the date to the 15th of the month.</inlineHelpText>
    <label>Verification Date</label>

    <type>Date</type>
</CustomField>