force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Video_And_Articles_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Video_And_Articles_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video And Articles Are Available</label>
    <type>Checkbox</type>
</CustomField>