force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Visit_Data_Shareback__c.field-meta.xml
<CustomField>
    <fullName>Visit_Data_Shareback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Data Shareback</label>
    <type>Checkbox</type>
</CustomField>