force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan</label>
    <referenceTo>Visit_Plan__c</referenceTo>
    <relationshipLabel>Clinical Trial Profiles</relationshipLabel>
    <relationshipName>Clinical_Trial_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>