force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Visit_Schedule_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Visit_Schedule_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Schedule Is Available</label>
    <type>Checkbox</type>
</CustomField>