force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Visits_are_Available__c.field-meta.xml
<CustomField>
    <fullName>Visits_are_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visits are Available</label>
    <type>Checkbox</type>
</CustomField>