force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/DCT_Platform_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>DCT_Platform_Mandatory</fullName>
    <active>true</active>
    <description>Make DCT Platform mandatory when Promote to DCT is true</description>
    <errorConditionFormula>AND( Promote_to_SH__c , TEXT( DCT_Platform__c ) == NULL)</errorConditionFormula>
    <errorMessage>DCT Platform cannot be blank when Promote to DCT is checked</errorMessage>
</ValidationRule>