force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/Recruitment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruitment_Status</fullName>
    <active>false</active>
    <description>SPNL can only change the value from &#39;Actively Enrolled&#39; to &#39;On Hold</description>
    <errorConditionFormula>AND(ISCHANGED(Override_Recruitment_Status__c),
ISPICKVAL(PRIORVALUE(Override_Recruitment_Status__c),&quot;Actively Enrolling&quot;), 
ISPICKVAL(Override_Recruitment_Status__c, &quot;On Hold&quot;)= FALSE,

$Profile.Name= &quot;IQVIA SPNL&quot;)</errorConditionFormula>
    <errorMessage>SPNL can only change the value from &#39;Actively Enrolled&#39; to &#39;On Hold</errorMessage>
</ValidationRule>