force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/Start_End_enrollment_trial_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_enrollment_trial_date</fullName>
    <active>true</active>
    <errorConditionFormula>Enrollment_Start_Date__c  &gt;  Enrolled_End_Date__c</errorConditionFormula>
    <errorMessage>Enrollment End Date can&#39;t happen before Enrolment Start Date</errorMessage>
</ValidationRule>