force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/Sync_flag_must_be_checked_before_DR.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_flag_must_be_checked_before_DR</fullName>
    <active>true</active>
    <errorConditionFormula>!Synch_with_TMDH__c &amp;&amp; Digital_Recruitment__c</errorConditionFormula>
    <errorDisplayField>Digital_Recruitment__c</errorDisplayField>
    <errorMessage>TMDH Sync flag must be checked before Digital Recruitment could be checked.</errorMessage>
</ValidationRule>