force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/Sync_flag_must_be_checked_before_PP.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_flag_must_be_checked_before_PP</fullName>
    <active>true</active>
    <errorConditionFormula>!Synch_with_TMDH__c &amp;&amp; Patient_Portal_Enabled__c</errorConditionFormula>
    <errorDisplayField>Patient_Portal_Enabled__c</errorDisplayField>
    <errorMessage>TMDH Sync flag must be checked before Patient Portal could be checked.</errorMessage>
</ValidationRule>