force-app/main/default/objects/Clinical_Trial_Profile__c/validationRules/Sync_flag_must_be_checked_before_PSS.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_flag_must_be_checked_before_PSS</fullName>
    <active>true</active>
    <errorConditionFormula>!Synch_with_TMDH__c &amp;&amp; Patient_study_search__c</errorConditionFormula>
    <errorDisplayField>Patient_study_search__c</errorDisplayField>
    <errorMessage>TMDH Sync flag must be checked before Patient study search could be checked.</errorMessage>
</ValidationRule>